[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuttut-dt"
version = "0.1.0"
authors = [
  { name="Nathan Candre", email="nathan.candre@gmail.com" },
  { name="beruzebabu" }
]
maintainers = [
    { name="beruzebabu" },
]
description = "A package to convert MIDI files to string instrument tabs (with diatonic instrument support)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.9.4",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "pretty_midi==0.2.10"
]

[project.urls]
Homepage = "https://github.com/beruzebabu/tuttut-dt"
Issues = "https://github.com/beruzebabu/tuttut-dt/issues"

# [project.gui-scripts]
# tuttut = "tuttut.midi_tabs_gui:run"